--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,12 @@ body {
   margin-top: 30px;
   font-family: Verdana, Geneva, sans-serif;
 }
+.title-content {
+  padding-top: 10px;
+}
+.context {
+  font-style: italic;
+}
 
 img {
   border-radius: 50%;
